--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
 }
 
 @font-face {
-  font-family: 'HSSanTokki20-Regular';
+  font-family: 'SUITE-Regular';
   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405@1.0/HSSanTokki20-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
